# doc-compare

./: .pre-commit-config.yaml  README.md  pyproject.toml
document_compare/: api.py  hooks.py  modules.txt  qroq_compare_four.py  utility.py
document_compare/document_compare/doctype/document/: document.js  document.json  document.py  test_document.py
document_compare/document_compare/doctype/documentcomparison/: documentcomparison.js  documentcomparison.json  documentcomparison.py  test_documentcomparison.py
document_compare/document_compare/doctype/feedbackdetails/: feedbackdetails.js  feedbackdetails.json  feedbackdetails.py  test_feedbackdetails.py
document_compare/public/css/: bootstrap.css  style1.css
document_compare/public/js/: bootstrap.js  script.js  script1.js
document_compare/www/: compare.html  home.html
