[project]
name = "document_compare"
authors = [
    { name = "adnan shaikh", email = "adnan.shaikh@cloverinfotech.com"}
]
description = "doc compare application"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.

    # added dependancies.
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "anthropic==0.45.2",
    "anyio==4.8.0",
    "aspose-words==25.2.0",
    "attrs==24.3.0",
    "backoff==2.2.1",
    "bcrypt==4.2.1",
    "beautifulsoup4==4.12.3",
    "bert-score==0.3.13",
    "blinker==1.9.0",
    "build==1.2.2.post1",
    "charset-normalizer==3.4.1",
    "chroma-hnswlib==0.7.6",
    "chromadb==0.5.20",
    "click==8.1.8",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "compare_pdf==0.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "Deprecated==1.2.17",
    "distro==1.9.0",
    "docx2pdf==0.1.8",
    "durationpy==0.9",
    "fastapi==0.115.7",
    "flatbuffers==25.1.24",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "greenlet==3.1.1",
    "groq==0.15.0",
    "grpcio==1.70.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.27.1",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "importlib_resources==6.5.2",
    "itsdangerous==2.2.0",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "kiwisolver==1.4.8",
    "kubernetes==32.0.0",
    "langchain==0.3.10",
    "langchain-chroma==0.2.0",
    "langchain-community==0.3.10",
    "langchain-core==0.3.32",
    "langchain-groq==0.2.0",
    "langchain-ollama==0.2.1",
    "langchain-openai==0.2.12",
    "langchain-text-splitters==0.3.2",
    "langsmith==0.1.147",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "ollama==0.4.7",
    "onnxruntime==1.20.1",
    "openai==1.60.1",
    "opencv-python==4.11.0.86",
    "opentelemetry-api==1.29.0",
    "opentelemetry-exporter-otlp-proto-common==1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.29.0",
    "opentelemetry-instrumentation==0.50b0",
    "opentelemetry-instrumentation-asgi==0.50b0",
    "opentelemetry-instrumentation-fastapi==0.50b0",
    "opentelemetry-proto==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "opentelemetry-semantic-conventions==0.50b0",
    "opentelemetry-util-http==0.50b0",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "playwright==1.49.1",
    "propcache==0.2.1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "pyee==12.0.0",
    "Pygments==2.19.1",
    "PyMuPDF==1.25.2",
    "pyparsing==3.2.1",
    "PyPika==0.48.9",
    "pyproject_hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.4.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.37",
    "starlette==0.45.3",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tokencost==0.1.18",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "typer==0.15.1",
    "tzdata==2025.1",
    "uvicorn==0.34.0",
    "watchfiles==1.0.4",
    "websocket-client==1.8.0",
    "websockets==14.2",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
